--- a/_includes/1.0/api/invoice.html
+++ b/_includes/1.0/api/invoice.html
@@ -114,7 +114,7 @@
                 <td>{{ site.format.type.address }}</td>
                 <td>no</td>
                 <td>yes</td>
-                <td>The shipping address. The shpping Contact address if any, the Customer one otherwise.</td>
+                <td>The shipping address. The shipping Contact address if any, the Customer one otherwise.</td>
             </tr>
             <tr>
                 <td>payment_terms_id</td>
@@ -185,7 +185,7 @@
                 <td>no</td>
                 <td>yes</td>
                 <td>Remaining amount to be paid.</td>
-            </tr>			
+            </tr>
             <tr>
                 <td>delivery_status</td>
                 <td>{{ site.format.type.integer }}</td>
@@ -202,10 +202,10 @@
                 <td>no</td>
                 <td>yes</td>
                 <td>Array of Ids of <a href="/docs/1.0/api/#payment" title="">Payments</a> made on that invoice.</td>
-            </tr>			
+            </tr>
         </tbody>
     </table>
-			
+
     <h3 id="invoicejsonexample">JSON Example</h3>
 	<p>That example describe a US invoice.</p>
     {% highlight bash %}{% include 1.0/api/json/invoice.json %}{% endhighlight %}
