--- a/_includes/1.0/api/invoice.html
+++ b/_includes/1.0/api/invoice.html
@@ -96,13 +96,6 @@
                 <td>Comment that will be printed on the final document.</td>
             </tr>
             <tr>
-                <td>shipping_date</td>
-                <td>{{ site.format.type.date }}</td>
-                <td>no</td>
-                <td>no</td>
-                <td>The date before which the goods should be delivered, if any.<br />Format: {{ site.format.date }}</a></td>
-            </tr>
-            <tr>
                 <td>shipping_contact_id</td>
                 <td>{{ site.format.type.integer }}</td>
                 <td>no</td>
@@ -195,6 +188,16 @@
 				    1: Not Delivered (default)<br />
 				    2: Partially Delivered<br />
 				    3: Delivered</td>
+            </tr>
+            <tr>
+                <td>invoice_status</td>
+                <td>{{ site.format.type.integer }}</td>
+                <td>no</td>
+                <td>yes</td>
+                <td>The invoice status, among :<br />
+                    1: Not invoiced (default)<br />
+                    2: Invoiced<br />
+                    3: Cancelled</td>
             </tr>
             <tr>
                 <td>payments_id</td>
