--- a/_includes/1.0/api/invoice.html
+++ b/_includes/1.0/api/invoice.html
@@ -156,7 +156,7 @@
                 <td>{{ site.format.type.double }}</td>
                 <td>no</td>
                 <td>yes</td>
-                <td>Overall tax amount. Inludes all taxes, discounts and reduce.</td>
+                <td>Overall tax amount. Includes all taxes, discounts and reduce.</td>
             </tr>
             <tr>
                 <td>total</td>
@@ -195,7 +195,7 @@
                 <td>no</td>
                 <td>yes</td>
                 <td>The invoice status, among :<br />
-                    2: Invoiced<br />
+                    2: Invoiced (default)<br />
                     3: Cancelled</td>
             </tr>
             <tr>
