--- a/_includes/1.0/api/invoice.html
+++ b/_includes/1.0/api/invoice.html
@@ -19,6 +19,29 @@
                 <td>Automatically assigned.</td>
             </tr>
             <tr>
+                <td>locked</td>
+                <td>{{ site.format.type.boolean }}</td>
+                <td>no</td>
+                <td>no</td>
+                <td>Indicates that the document can no longer be edited nor deleted.</td>
+            </tr>
+            <tr>
+                <td>sent</td>
+                <td>{{ site.format.type.boolean }}</td>
+                <td>no</td>
+                <td>no</td>
+                <td>Has the document been finalized or sent to the Customer.</td>
+            </tr>
+            <tr>
+                <td>sent_at</td>
+                <td>{{ site.format.type.date }}</td>
+                <td>no</td>
+                <td>no</td>
+                <td>The date the document has been finalized or sent to the Customer.
+                    <br />Format: {{ site.format.date }}<br />
+                </td>
+            </tr>
+            <tr>
                 <td>customer_id</td>
                 <td>{{ site.format.type.integer }}</td>
                 <td>yes</td>
