--- a/_includes/1.0/api/customer.html
+++ b/_includes/1.0/api/customer.html
@@ -238,6 +238,31 @@
     <h3 id="customerjsonexample">JSON Example</h3>
     {% highlight bash %}{% include 1.0/api/json/customer.json %}{% endhighlight %}
 
+    <h3 id="customersorting">Available Sorting Options</h3>
+    <table class="table table-bordered table-striped">
+        <thead>
+        {% include table-header-sorting.html %}
+        </thead>
+        <tbody>
+        <tr>
+            <td>id</td>
+            <td>Sorts by id field.</td>
+        </tr>
+        <tr>
+            <td>user_code</td>
+            <td>Sorts by user code field.</td>
+        </tr>
+        <tr>
+            <td>full_name</td>
+            <td>Sorts by full name field.</td>
+        </tr>
+        <tr>
+            <td>created_at</td>
+            <td>Sorts by the creation date field.</td>
+        </tr>
+        </tbody>
+    </table>
+
     <h3 id="customeravailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/full.html %}
 </div>
