--- a/_includes/1.0/overview/pagination.html
+++ b/_includes/1.0/overview/pagination.html
@@ -5,7 +5,6 @@
 
     <p>Most APIs that list resources are paginated. Pagination is consistent across all APIs that require it. You can use the offset and limit parameters to page through query results.</p>
 
-
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
@@ -31,5 +30,14 @@
         </tbody>
     </table>
 
-
+    <h3>Sorting</h3>
+    <p>
+        The API allows sorting ASC or DESC by passing the parameter <b>sort</b> with the option name your want to sort on,
+        prefixed by <b>+</b> for ASC and <b>-</b> for DESC.
+        For instance, use <b>&sort=-id</b> to sort by id field in reverse order.
+    </p>
+    <p>
+        Keep in mind that only certain endpoints and certain fields support this feature. Check the
+        "Available Sorting Fields" section of each EndPoint for available option names and fields.
+    </p>
 </div>
