--- a/_includes/1.0/api/project.html
+++ b/_includes/1.0/api/project.html
@@ -37,6 +37,19 @@
     <h3 id="projectjsonexample">JSON Example</h3>
     {% highlight bash %}{% include 1.0/api/json/project.json %}{% endhighlight %}
 
+    <h3 id="projectfilter">Available Filter Fields</h3>
+    <table class="table table-bordered table-striped">
+        <thead>
+        {% include table-header-filter.html %}
+        </thead>
+        <tbody>
+        <tr>
+            <td>created_at</td>
+            <td>Filter by the creation date.</td>
+        </tr>
+        </tbody>
+    </table>
+
     <h3 id="projectsorting">Available Sorting Options</h3>
     <table class="table table-bordered table-striped">
         <thead>
