--- a/_includes/1.0/api/vendor.html
+++ b/_includes/1.0/api/vendor.html
@@ -167,6 +167,19 @@
     <h3 id="vendorjsonexample">JSON Example</h3>
     {% highlight bash %}{% include 1.0/api/json/vendor.json %}{% endhighlight %}
 
+    <h3 id="vendorfilter">Available Filter Fields</h3>
+    <table class="table table-bordered table-striped">
+        <thead>
+        {% include table-header-filter.html %}
+        </thead>
+        <tbody>
+        <tr>
+            <td>created_at</td>
+            <td>Filter by the creation date.</td>
+        </tr>
+        </tbody>
+    </table>
+
     <h3 id="vendorsorting">Available Sorting Options</h3>
     <table class="table table-bordered table-striped">
         <thead>
