--- a/_includes/1.0/api/quote.html
+++ b/_includes/1.0/api/quote.html
@@ -162,6 +162,19 @@
     <h3 id="quotejsonexample">JSON Example</h3>
     {% highlight bash %}{% include 1.0/api/json/quote.json %}{% endhighlight %}
 
+    <h3 id="quotefilter">Available Filter Fields</h3>
+    <table class="table table-bordered table-striped">
+        <thead>
+        {% include table-header-filter.html %}
+        </thead>
+        <tbody>
+        <tr>
+            <td>customer_id</td>
+            <td>Filter by one or multiple customer ids (e.g. ?customer_id=1,2,3).</td>
+        </tr>
+        </tbody>
+    </table>
+
     <h3 id="quoteavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/readonly.html %}
 </div>
