doc: add read only banner to the installment section

--- a/_includes/1.0/api/installment.html
+++ b/_includes/1.0/api/installment.html
@@ -2,6 +2,7 @@
 
     <h2>Installments</h2>
     {% highlight bash %}Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.installments.url}}{% endhighlight %}
+    <p class="message bg-primary">This API is read only.</p>
     <h3 id="installmentjsonformat">JSON Format</h3>
     <p>Installments are represented as JSON objects which have the following keys:</p>
 
