doc: Rename field of Snippet : label to name

--- a/_includes/1.0/api/nestedelements.html
+++ b/_includes/1.0/api/nestedelements.html
@@ -262,9 +262,9 @@
                     <td>The id of the encapsulated object </td>
                 </tr>
                 <tr>
-                    <td>label</td>
+                    <td>name</td>
                     <td>{{ site.format.type.string }}</td>
-                    <td>The label of the encapsulated object</td>
+                    <td>The name of the encapsulated object</td>
                 </tr>
                 <tr>
                     <td>user_code</td>
