--- a/_includes/1.0/api/quote.html
+++ b/_includes/1.0/api/quote.html
@@ -21,6 +21,37 @@
                 <td>The status, among : "open" (default), "won", "lost"</td>
             </tr>
             <tr>
+                <td>delivery_status</td>
+                <td>{{ site.format.type.integer }}</td>
+                <td>The delivery status, among :<br />
+                    1: Not Delivered (default)<br />
+                    2: Partially Delivered<br />
+                    3: Delivered</td>
+            </tr>
+            <tr>
+                <td>invoice_status</td>
+                <td>{{ site.format.type.integer }}</td>
+                <td>The invoice status, among :<br />
+                    1: Not invoiced (default)<br />
+                    2: Invoiced<br />
+                    3: Cancelled</td>
+            </tr>
+            <tr>
+                <td>expiration_date</td>
+                <td>{{ site.format.type.date }}</td>
+                <td>For open quotes, the day the quote will expire.<br/>Format: {{ site.format.date }}<br/></td>
+            </tr>
+            <tr>
+                <td>closing_date</td>
+                <td>{{ site.format.type.date }}</td>
+                <td>For won quotes, the date the quote has been accepted.<br/>Format: {{ site.format.date }}<br/></td>
+            </tr>
+            <tr>
+                <td>losing_date</td>
+                <td>{{ site.format.type.date }}</td>
+                <td>For lost quotes, the date the quote has been rejected.<br/>Format: {{ site.format.date }}<br/></td>
+            </tr>
+            <tr>
                 <td>customer_id <span class="deprecated">DEPRECATED</span></td>
                 <td>{{ site.format.type.integer }}</td>
                 <td>Id of the <a href="/docs/1.0/api/#customer" title="">Customer.</a></td>
@@ -90,22 +121,6 @@
                 <td>project_id</td>
                 <td>{{ site.format.type.integer }}</td>
                 <td>Id of the <a href="/docs/1.0/api/#project" title="">Project</a> related to that quote, if any.</td>
-            </tr>
-            <tr>
-                <td>delivery_status</td>
-                <td>{{ site.format.type.integer }}</td>
-                <td>The delivery status, among :<br />
-                    1: Not Delivered (default)<br />
-                    2: Partially Delivered<br />
-                    3: Delivered</td>
-            </tr>
-            <tr>
-                <td>invoice_status</td>
-                <td>{{ site.format.type.integer }}</td>
-                <td>The invoice status, among :<br />
-                    1: Not invoiced (default)<br />
-                    2: Invoiced<br />
-                    3: Cancelled</td>
             </tr>
             <tr>
                 <td>user_code</td>
