doc: fix description of customer_id filter

--- a/_includes/1.0/api/invoice.html
+++ b/_includes/1.0/api/invoice.html
@@ -255,7 +255,7 @@
         <tbody>
         <tr>
             <td>customer_id</td>
-            <td>Filter by one or multiple customer ids (e.g. ?customer_id=1,2,3).</td>
+            <td>Filter by customer id.</td>
         </tr>
         </tbody>
     </table>
